# rules_bazel_integration_test

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel_versions.bzl  ci.bazelrc  extensions.bzl  repro_error  shared.bazelrc
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: renovate.json
.github/actions/build_and_test/: action.yml
.github/actions/configure_bzlmod/: action.yml
.github/actions/configure_swift_for_linux/: action.yml
.github/actions/execute_integration_tests/: action.yml
.github/actions/integration_test/: action.yml
.github/workflows/: ci.yml  create_release.yml  publish_to_bcr.yml  scheduled_builds.yml
bashunit/: BUILD.bazel  bashunit.bash  bashunit_test.py  bashunit_utils.sh
bazel_integration_test/: BUILD.bazel  bazel_binaries.bzl  bazel_integration_test.bzl  defs.bzl  deps.bzl  extensions.bzl  repo_defs.bzl  script_test.bzl
bazel_integration_test/bzlmod/: BUILD.bazel  bazel_binaries.bzl  bazel_binary_utils.bzl  e2e_test_runner.sh  workspace_bazel_binaries.bzl
bazel_integration_test/internal/: BUILD.bazel  bazel_integration_test.bzl  create_scratch_dir.sh  default_test_runner.bzl  default_test_runner.sh  integration_test_runner.sh  integration_test_utils.bzl  integration_test_wrapper.sh
bazel_integration_test/private/: BUILD.bazel  bazel_binaries.bzl  bazel_binaries_script.template  bazel_integration_test.bzl  bazelisks.bzl  default_test_runner.bzl  default_test_runner.sh  integration_test_utils.bzl  integration_test_wrapper.sh  no_deps_utils.bzl  script_test.bzl
bazel_integration_test/private/bzlmod/: bazel_binaries.bzl
bazel_integration_test/py/: BUILD.bazel  bazel_py_integration_tests.bzl  test_base.py
doc/: BUILD.bazel  README.md  api.md  custom_test_runners.md  integration_test_utils.md  rules_and_macros_overview.md
examples/: BUILD.bazel  README.md  dynamic_workspace_test_runner.sh  local_bazel_binary_test.sh  sample_script_test.sh  use_create_scratch_dir_test.sh  use_create_scratch_dir_test_runner.sh
examples/custom_bazel_integration_test/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  custom_bazel_integration_test.bzl  test_runner_wrapper.sh
examples/custom_bazel_integration_test/integration_tests/: BUILD.bazel  workspace_test.sh
examples/custom_bazel_integration_test/integration_tests/workspace/: BUILD.bazel
examples/custom_runner_parent/: README.md  WORKSPACE
examples/custom_runner_parent/Sources/CustomTestRunner/: BUILD.bazel  Bash.swift  CommandRunner.swift  CustomTestRunner.swift  main.swift
examples/custom_runner_parent/Sources/MyModule/: BUILD.bazel  Person.swift
examples/custom_runner_parent/Tests/CustomTestRunnerTests/: BUILD.bazel  CustomTestRunnerTests.swift  mainTests.swift
examples/custom_runner_parent/Tests/MyModuleTests/: BUILD.bazel  PersonTests.swift
examples/custom_runner_parent/integration_tests/: BUILD.bazel
examples/custom_test_runner/: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  bazel_versions.bzl  extensions.bzl  swift_deps.bzl  swift_deps_index.json
examples/custom_test_runner/Sources/CustomTestRunner/: BUILD.bazel  Bash.swift  CustomTestRunner.swift  main.swift
examples/custom_test_runner/Sources/CustomTestRunnerBin/: BUILD.bazel
examples/custom_test_runner/Sources/CustomTestRunnerLib/: BUILD.bazel
examples/custom_test_runner/Tests/CustomTestRunnerTests/: BUILD.bazel  CustomTestRunnerTests.swift  main.swift
examples/custom_test_runner/integration_tests/: BUILD.bazel
examples/custom_test_runner/integration_tests/workspace/: BUILD.bazel  MODULE.bazel  WORKSPACE  foo_test.sh
examples/env_var_with_rootpath/: BUILD.bazel  sample_file_extension.bzl
examples/env_var_with_rootpath/sample_workspace/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  test.sh
examples/simple/: .bazelrc  .hidden_file  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  do_change_test.sh
examples/simple/mockascript/: BUILD.bazel  defs.bzl  deps.bzl  mockascript.bzl
examples/simple/mockascript/internal/: BUILD.bazel  foo.bzl
examples/simple/mockascript/private/: .another_hidden_file  BUILD.bazel  foo.bzl  mockascript_library.bzl
examples/simple/tests/: BUILD.bazel  mockascript_tests.bzl
release/: BUILD.bazel  README.md  archive_run_test.sh  archive_test_runner.sh  workspace_snippet.tmpl
test/: BUILD.bazel  integration_test_utils_tests.bzl
tests/: BUILD.bazel  integration_test_impl_tests.bzl  integration_test_utils_tests.bzl  no_deps_utils_tests.bzl
tests/e2e_tests/: BUILD.bazel  README.md
tests/e2e_tests/workspace/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE
tests/e2e_tests/workspace/child_workspace/: BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  child_test.sh
tests/params_tests/: BUILD.bazel  env_inherit_attr_test.bzl  env_inherit_attr_test.sh
tests/params_tests/workspace/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/py/: BUILD.bazel  test_base_test.py
tests/py_tests/: BUILD.bazel  test_base_test.py
tests/tools_tests/: BUILD.bazel  create_scratch_dir_test.sh  find_child_workspace_packages_test.sh  remove_bazel_symlinks_test.sh  remove_child_wksp_bazel_symlinks_test.sh  setup_test_workspace.sh  shared_fns_test.sh  update_deleted_packages_test.sh
tests/tools_tests/shared_fns_tests/: BUILD.bazel  find_any_file_test.sh  find_workspace_dirs_test.sh
tools/: BUILD.bazel  assertions.sh  common.sh  create_scratch_dir.sh  create_scratch_dir_test.sh  fake_bazel.sh  find_child_workspace_packages.sh  find_child_workspace_packages_test.sh  join_by_test.sh  normalize_path_test.sh  print_by_line_test.sh  remove_bazel_symlinks.sh  remove_child_wksp_bazel_symlinks.sh  setup_test_workspace.sh  shared_fns.sh  sort_items_test.sh  update_deleted_packages.sh  update_deleted_packages_test.sh  upsearch_test.sh
