load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    "@cgrindel_bazel_starlib//bzlformat:defs.bzl",
    "bzlformat_missing_pkgs",
    "bzlformat_pkg",
)
load(
    "@cgrindel_bazel_starlib//updatesrc:defs.bzl",
    "updatesrc_update_all",
)
load(
    "@contrib_rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "integration_test_utils",
)

bzlformat_pkg(name = "bzlformat")

bzlformat_missing_pkgs(
    name = "bzlformat_missing_pkgs",
)

updatesrc_update_all(
    name = "update_all",
    targets_to_run = [
        "@contrib_rules_bazel_integration_test//tools:update_deleted_packages",
        "//doc:update",
        ":bzlformat_missing_pkgs_fix",
    ],
)

bzl_library(
    name = "bazel_versions",
    srcs = ["bazel_versions.bzl"],
    visibility = ["//:__subpackages__"],
)

# TODO: FIX ME!
# alias(
#     name = "bazel_binary_bazelversion",
#     actual = "@build_bazel_bazel_5_1_1//:bazel_binary",
# )

# MARK: - Related to Integration Tests

# This target collects all of the parent workspace files needed by the child workspaces.
filegroup(
    name = "local_repository_files",
    # Include every package that is required by the child workspaces.
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "//bazel_integration_test:all_files",
        "//bazel_integration_test/private:all_files",
        "//tools:all_files",
    ],
    visibility = ["//:__subpackages__"],
)

test_suite(
    name = "all_integration_tests",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    tests = [
        "//examples:integration_tests",
        "//tests/params_tests:integration_tests",
        "//tests/py_tests:integration_tests",
    ],
    visibility = ["//:__subpackages__"],
)
