load(
    "@cgrindel_bazel_starlib//bzlformat:defs.bzl",
    "bzlformat_missing_pkgs",
    "bzlformat_pkg",
)
load("@cgrindel_bazel_starlib//bzltidy:defs.bzl", "tidy", "tidy_all")
load("@cgrindel_bazel_starlib//markdown:defs.bzl", "markdown_pkg")
load(
    "@cgrindel_bazel_starlib//updatesrc:defs.bzl",
    "updatesrc_update_all",
)
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "integration_test_utils",
)

markdown_pkg(name = "markdown")

bzlformat_pkg(name = "bzlformat")

bzlformat_missing_pkgs(
    name = "bzlformat_missing_pkgs",
)

tidy_all(name = "tidy_all")

tidy(
    name = "tidy",
    targets = [
        # Remove the child workspace symlinks before doing some of the other
        # operations that my experience infinite symlink expansion errors.
        "@rules_bazel_integration_test//tools:remove_child_wksp_bazel_symlinks",
        "@rules_bazel_integration_test//tools:update_deleted_packages",
        ":bzlformat_missing_pkgs_fix",
        ":update_all",
    ],
)

updatesrc_update_all(
    name = "update_all",
    targets_to_run = [
        "@rules_bazel_integration_test//tools:update_deleted_packages",
        ":bzlformat_missing_pkgs_fix",
    ],
)

alias(
    name = "update_files",
    actual = ":update_all",
)

# MARK: - Related to Integration Tests

# Provides the *.bazlerc files for the example workspace integration tests.
filegroup(
    name = "shared_bazelrc_files",
    srcs = glob(["*.bazelrc"]),
    visibility = ["//:__subpackages__"],
)

# Provides the *.bazlerc files for the example workspace integration tests.
filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

# This target collects all of the parent workspace files needed by the child workspaces.
filegroup(
    name = "local_repository_files",
    # Include every package that is required by the child workspaces.
    srcs = [
        ":all_files",
        ":shared_bazelrc_files",
        "//bazel_integration_test:all_files",
        "//bazel_integration_test/bzlmod:all_files",
        "//bazel_integration_test/private:all_files",
        "//bazel_integration_test/py:all_files",
        "//tools:all_files",
    ],
    visibility = ["//:__subpackages__"],
)

test_suite(
    name = "all_integration_tests",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    tests = [
        "//examples:integration_tests",
        "//examples/env_var_with_rootpath:integration_tests",
        "//release:archive_test",
        "//tests/e2e_tests:integration_tests",
        "//tests/params_tests:integration_tests",
        "//tests/py_tests:integration_tests",
    ],
    visibility = ["//:__subpackages__"],
)
