module(
    name = "rules_bazel_integration_test",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_python", version = "0.19.0")
bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "cgrindel_bazel_starlib", version = "0.14.8")

register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")

# TODO(chuck): Add bazel_binary extension calls
