module(
    name = "rules_bazel_integration_test",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_python", version = "0.19.0")
bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "cgrindel_bazel_starlib", version = "0.14.8")

register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")

# GH125: Must keep the Bazel version listed in bazel_versions.bzl in sync with
# those loaded below.
bazel_binaries = use_extension(
    "//bazel_integration_test:extensions.bzl",
    "bazel_binaries",
)
bazel_binaries.download(version_file = "//:.bazelversion")
bazel_binaries.download(version = "7.0.0-pre.20230215.2")
use_repo(
    bazel_binaries,
    "build_bazel_bazel_.bazelversion",
    "build_bazel_bazel_7_0_0-pre_20230215_2",
)
