load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
)

bzl_library(
    name = "repo_defs",
    srcs = ["repo_defs.bzl"],
    deps = [
        "//bazel_integration_test/private:bazel_binaries",
        "//bazel_integration_test/private:no_deps_utils",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//bazel_integration_test/private:bazel_binaries",
        "//bazel_integration_test/private:bazel_integration_test",
        "//bazel_integration_test/private:default_test_runner",
        "//bazel_integration_test/private:integration_test_utils",
        "//bazel_integration_test/private:script_test",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
