load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load(
    "@cgrindel_bazel_starlib//bzlrelease:defs.bzl",
    "create_release",
    "generate_release_notes",
    "generate_workspace_snippet",
    "hash_sha256",
    "release_archive",
    "update_readme",
)
load("//:bazel_versions.bzl", "CURRENT_BAZEL_VERSION")
load(
    "//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
)

bzlformat_pkg(name = "bzlformat")

# MARK: - Release

generate_workspace_snippet(
    name = "generate_workspace_snippet",
    sha256_file = ":archive_sha256",
    template = "workspace_snippet.tmpl",
    workspace_name = "rules_bazel_integration_test",
)

generate_release_notes(
    name = "generate_release_notes",
    generate_workspace_snippet = ":generate_workspace_snippet",
)

update_readme(
    name = "update_readme",
    generate_workspace_snippet = ":generate_workspace_snippet",
)

create_release(
    name = "create",
    workflow_name = "Create Release",
)

release_archive(
    name = "archive",
    srcs = ["//:local_repository_files"],
    out = "rules_bazel_integration_test.tar.gz",
)

hash_sha256(
    name = "archive_sha256",
    src = ":archive",
    out = "rules_bazel_integration_test.tar.gz.sha256",
)

build_test(
    name = "archive_build_test",
    targets = [
        ":archive",
        ":archive_sha256",
    ],
)

# sh_test(
#     name = "archive_run_test",
#     srcs = ["archive_run_test.sh"],
#     data = [
#         ":archive",
#     ],
#     deps = [
#         "@bazel_tools//tools/bash/runfiles",
#         "@cgrindel_bazel_starlib//shlib/lib:assertions",
#     ],
# )

sh_binary(
    name = "archive_run_test_runner",
    testonly = True,
    srcs = ["archive_run_test.sh"],
    data = [":archive"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
    ],
)

bazel_integration_test(
    name = "archive_run_test",
    bazel_binaries = bazel_binaries,
    bazel_version = CURRENT_BAZEL_VERSION,
    test_runner = ":archive_run_test_runner",
)
