load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

# MARK: - Binary Declarations

sh_binary(
    name = "find_child_workspace_packages",
    srcs = ["find_child_workspace_packages.sh"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_shlib//lib:arrays",
        "@cgrindel_bazel_shlib//lib:files",
    ],
)

sh_binary(
    name = "update_deleted_packages",
    srcs = ["update_deleted_packages.sh"],
    data = [
        ":find_child_workspace_packages",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_shlib//lib:arrays",
        "@cgrindel_bazel_shlib//lib:files",
        "@cgrindel_bazel_shlib//lib:messages",
        "@cgrindel_bazel_shlib//lib:paths",
    ],
)

sh_binary(
    name = "create_scratch_dir",
    srcs = ["create_scratch_dir.sh"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_shlib//lib:messages",
        "@cgrindel_bazel_shlib//lib:paths",
    ],
)

# MARK: - Test Declarations

sh_library(
    name = "setup_test_workspace",
    testonly = 1,
    srcs = ["setup_test_workspace.sh"],
)

sh_test(
    name = "find_child_workspace_packages_test",
    srcs = ["find_child_workspace_packages_test.sh"],
    data = [
        ":find_child_workspace_packages",
    ],
    deps = [
        ":setup_test_workspace",
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_shlib//lib:assertions",
    ],
)

sh_test(
    name = "update_deleted_packages_test",
    srcs = ["update_deleted_packages_test.sh"],
    data = [
        ":update_deleted_packages",
    ],
    deps = [
        ":setup_test_workspace",
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_shlib//lib:assertions",
    ],
)

sh_test(
    name = "create_scratch_dir_test",
    srcs = ["create_scratch_dir_test.sh"],
    data = [
        ":create_scratch_dir",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_shlib//lib:assertions",
    ],
)
